buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'jacoco-report-aggregation'
    id 'com.github.spotbugs' version '6.0.7'
}

repositories {
    mavenCentral()
}

group = 'org.clematis'
version = '2.0.0-SNAPSHOT'

subprojects {

    apply plugin: 'java'
    apply plugin: 'jacoco'
    apply plugin: 'checkstyle'
    apply plugin: 'com.github.spotbugs'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    dependencies {

        annotationProcessor "org.projectlombok:lombok:1.18.40"
        checkstyle "com.puppycrawl.tools:checkstyle:10.9.1"

        compileOnly "com.github.spotbugs:spotbugs:4.9.8"
        compileOnly "com.github.spotbugs:spotbugs-annotations:4.9.8"
        compileOnly "org.projectlombok:lombok:1.18.40"

        testAnnotationProcessor "org.projectlombok:lombok:1.18.40"

        testCompileOnly "com.github.spotbugs:spotbugs:4.9.8"
        testCompileOnly "com.github.spotbugs:spotbugs-annotations:4.9.8"
        testCompileOnly "org.projectlombok:lombok:1.18.40"

        testImplementation "junit:junit:4.13.2"
        testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
        testImplementation "org.junit.jupiter:junit-jupiter-engine:5.10.0"
        testImplementation "org.mockito:mockito-core:5.22.0"

        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    }

// ------------ JaCoCo configuration  ---------
    ext {
        setProperty('snippetsDir', file("build/generated-snippets"))
    }

    test {
        outputs.dir snippetsDir
        useJUnitPlatform()
        testLogging.showStandardStreams = true
        jacoco {
            destinationFile = file("jacoco/jacocoTest.exec")
            classDumpDir = file("jacoco/classpathdumps")
        }
    }

    jacocoTestReport {
        reports {
            xml.required = true
            csv.required = false
            html.outputLocation = file('jacoco/html')
            xml.outputLocation = file('jacoco/jacoco.xml')
        }
        allprojects.each {
            sourceSets it.sourceSets.main
        }
        executionData fileTree(project.rootDir.absolutePath).include("jacoco/*.exec")
    }

    jacocoTestReport.dependsOn test
    test.finalizedBy jacocoTestReport

    jar {
        //archiveFileName = "${archiveBaseName}.${archiveExtension}"
        manifest {
            attributes(
                "Implementation-Title": project.name,
                "Implementation-Version": archiveVersion
            )
        }
        from {
            configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
        }
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }

// ------------ Spotbugs configuration  ---------
    spotbugs {
        toolVersion = '4.9.8'
    }

    spotbugsMain {
        reports {
            xml {
                required = false
            }
            html {
                required = true
            }
        }
        ignoreFailures = true;
    }

    spotbugsTest {
        reports {
            xml {
                required = false
            }
            html {
                required = true
            }
        }
        ignoreFailures = true;
    }

// ------------ Checkstyle configuration  ---------

    checkstyle {
        configProperties.configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
        configProperties.checkstyleSuppressionFile = file("${project.rootDir}/config/checkstyle/suppressions.xml")
    }

    tasks.register('checkstyleReport') {
        doLast {
            if (file("${project.buildDir}/reports/checkstyle/${project.ext.checkType}.xml").exists()) {
                ant.xslt(in: "${project.buildDir}/reports/checkstyle/${project.ext.checkType}.xml",
                        style: "${project.rootDir}/config/checkstyle/checkstyle.xsl",
                        out: "${project.buildDir}/reports/checkstyle/checkstyle_${project.ext.checkType}.html")
            }
        }
    }

    tasks.withType(Checkstyle).tap {
        configureEach {
            exclude '**/*Test*'
        }
    }
}

dependencies {
    jacocoAggregation project(':api')
    jacocoAggregation project(':kiwi')
    jacocoAggregation project(':installer')
    jacocoAggregation project(':runtime')
    jacocoAggregation project(':profiles')
    jacocoAggregation project(':ui')
}



